Add rough sponsorship footer stuff.

--- a/css/styles.css
+++ b/css/styles.css
@@ -125,7 +125,7 @@ UNORGANIZED
     font-size: 22px; }
 
 .bottom-logo {
-  height: 40px;
+  height: 28px;
   margin-top: -3px; }
 
 /*--------------------
@@ -381,4 +381,18 @@ FOOTER
 --------------------*/
 .footer {
   padding-top: 20px;
-  padding-bottom: 20px; }
+  padding-bottom: 20px;
+  background-color: black;
+  color: white;
+  width: 100%; }
+
+.footer-list {
+  list-style-type: none; }
+  .footer-list li {
+    display: inline;
+    margin-right: 10px; }
+
+.sponsor {
+  margin-left: 10px;
+  display: inline;
+  height: 40px; }
