--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,6 @@ UNORGANIZED
   padding-left: 20px;
   padding-right: 20px;
   color: white;
-  font-size: 20px;
   /*p {
       font-size: 24px;
   }
@@ -103,6 +102,9 @@ UNORGANIZED
     .bullet-info-area h2 {
       font-size: 40px; } }
 
+@media (min-width: 768px) {
+  .bullet-info-area {
+    font-size: 20px; } }
 .cta-area {
   background-color: rgba(218, 236, 246, 0.5);
   padding: 20px 20px;
@@ -120,13 +122,10 @@ UNORGANIZED
 .urgency-statement {
   text-align: center;
   color: white;
-  font-size: 19px; }
+  font-size: 19px;
+  padding: 0px 10px; }
   .urgency-statement strong {
     font-size: 22px; }
-
-.bottom-logo {
-  height: 28px;
-  margin-top: -3px; }
 
 /*--------------------
 COLOR CLASSES
@@ -206,7 +205,6 @@ button:active {
 SPLASH SCREEN
 --------------------*/
 .splash {
-  height: 635px;
   overflow: hidden;
   position: relative;
   background: none; }
@@ -244,6 +242,9 @@ SPLASH SCREEN
     .splash .call-to-action .vid-col {
       padding: 0; }
 
+@media (min-width: 768px) {
+  .splash {
+    height: 635px; } }
 .cta-email {
   margin-bottom: 15px; }
 
@@ -316,6 +317,7 @@ POINTS
   margin-bottom: 40px; }
 
 .share-container {
+  margin-bottom: 20px;
   text-align: center; }
   .share-container .stButton, .share-container stMainServices {
     height: inherit; }
@@ -327,21 +329,23 @@ POINTS
   background-image: url(../img/iceberg-overlay.png);
   background-position: top center;
   background-size: cover;
-  height: 1000px; }
+  height: 1180px; }
   .iceberg .iceberg-bottom {
     bottom: 0px;
     position: absolute;
     width: 100%;
-    padding: 30px;
     margin: auto; }
   .iceberg a {
     color: white; }
 
 .quote {
-  padding-right: 60px;
+  font-size: 20px;
   font-weight: 200;
   line-height: 1.4em; }
 
+@media (min-width: 768px) {
+  .quote {
+    font-size: 24px; } }
 /*--------------------
 SHARE
 --------------------*/
@@ -379,12 +383,25 @@ DONATION
 /*--------------------
 FOOTER
 --------------------*/
+.bottom-logo {
+  height: 28px;
+  margin-top: 0px; }
+
 .footer {
   padding-top: 20px;
   padding-bottom: 20px;
   background-color: black;
   color: white;
+  font-size: 14px;
   width: 100%; }
+  .footer span {
+    margin-top: 3px; }
+  .footer a {
+    color: #ff33c4; }
+  .footer a:hover {
+    color: #ff00b5; }
+  .footer a:visited {
+    color: #ff00b5; }
 
 .footer-list {
   list-style-type: none; }
@@ -396,3 +413,7 @@ FOOTER
   margin-left: 10px;
   display: inline;
   height: 40px; }
+
+.sponsor-text {
+  font-size: 13px;
+  color: white; }
