--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -151,8 +151,7 @@ UNORGANIZED
     padding-left: 20px;
     padding-right: 20px;
     color: white;
-    font-size: 20px;
-    
+
     h2 { 
         color: white;
         font-size: 36px;
@@ -173,6 +172,12 @@ UNORGANIZED
     li {
         font-size: 24px;
     }*/
+}
+
+@media (min-width: 768px) {
+    .bullet-info-area { 
+        font-size: 20px;
+    }
 }
 
 .cta-area {
@@ -197,15 +202,11 @@ UNORGANIZED
     text-align: center;
     color: white;
     font-size: 19px;
+    padding: 0px 10px;
     
     strong {
         font-size: 22px;
     }
-}
-
-.bottom-logo {
-    height: 28px;
-    margin-top: -3px;
 }
 
 
@@ -322,7 +323,6 @@ SPLASH SCREEN
 --------------------*/
 
 .splash {
-    height: 635px;
     overflow: hidden;
     position: relative; //needed to make overflow work
     background: none;
@@ -361,10 +361,6 @@ SPLASH SCREEN
 
         max-width: 1000px;
         margin: auto;
-
-
-
-
     }
 
     .call-to-action {
@@ -380,6 +376,12 @@ SPLASH SCREEN
         .vid-col {
             padding: 0;
         }
+    }
+}
+
+@media (min-width: 768px) {
+    .splash {
+        height: 635px;
     }
 }
 
@@ -482,6 +484,7 @@ POINTS
 }
 
 .share-container {
+    margin-bottom: 20px;
     text-align: center;
 
     .stButton, ,stMainServices {
@@ -502,13 +505,13 @@ POINTS
     background-position: top center;
     background-size: cover;
 
-    height: 1000px;
+    height: 1180px;
 
     .iceberg-bottom {
         bottom: 0px;
         position: absolute;
         width: 100%;
-        padding: 30px;
+        //padding: 30px;
         margin:auto;
     }
     
@@ -518,14 +521,21 @@ POINTS
 }
 
 .quote {
-    padding-right: 60px;
+    font-size: 20px;
+    //padding-right: 60px;
     font-weight: 200;
     line-height: 1.4em;
 }
 
+@media (min-width: 768px) {
+    .quote {
+        font-size: 24px;   
+    }
+}
+
 
 @mixin standard-section() {
-        padding-top: 20px;
+    padding-top: 20px;
     padding-bottom: 20px;
 }
 /*--------------------
@@ -573,12 +583,33 @@ DONATION
 FOOTER
 --------------------*/
 
+.bottom-logo {
+    height: 28px;
+    margin-top: 0px;
+}
 
 .footer {
     @include standard-section;
     background-color: black;
     color: white;
+    font-size: 14px;
     width: 100%;
+    
+    span {
+       margin-top: 3px; 
+    }
+    
+    a {
+        color: $color5-highlight;  
+    }
+    
+    a:hover {
+        color: $color5;
+    }
+    
+    a:visited {
+        color: $color5;   
+    }
 }
 
 .footer-list {
@@ -596,3 +627,7 @@ FOOTER
     height: 40px;
 }
 
+.sponsor-text {
+    font-size: 13px;
+    color: white;
+}
