--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,153 +1,5 @@
-/*--------------------
-COLORS
---------------------*/
+@import '_base.scss';
 
-$color1: #CEEC97;
-
-$color1-shadow: darken($color1, 10%);
-$color1-highlight: lighten($color1, 10%);
-
-$color2: #F4B393;
-$color2-shadow: darken($color2, 10%);
-$color2-highlight: lighten($color2, 10%);
-
-$color3: #7A28CB;
-$color3-shadow: darken($color3, 10%);
-$color3-highlight: lighten($color3, 10%);
-
-//Dark Color
-$color4: #494368;
-$color4-alpha: rgba($color4, 0.9);
-$color4-shadow: darken($color4, 10%);
-$color4-highlight: lighten($color4, 10%);
-
-//Button color
-$color5: #ff00b5;
-$color5-alpha: rgba($color5, 0.8);
-$color5-shadow: darken($color5, 10%);
-$color5-highlight: lighten($color5, 10%);
-$color5-highlight2: lighten($color5, 20%);
-
-.color1-background {
-    color: white;
-    background: $color1;
-}
-
-.color2-background {
-    color: white;
-    background: $color2;
-}
-
-.color3-background {
-    background: $color3;
-}
-
-.color4-background {
-    background: $color4;
-    color: white;
-}
-
-.color4-shadow-background {
-    background: $color4-shadow;
-    color: white;
-}
-
-.color5-background {
-    background: $color5;
-}
-
-
-/*--------------------
-DEFAULTS
---------------------*/
-
-.row {
-
-}
-
-h1,h2,h3,h4,h5,h6 {
-    margin-top: 0;
-    margin-bottom: 20px;
-}
-
-body {
-    font-family: "Roboto";
-    font-size: 1.8em;
-    font-weight: 200;
-    line-height: 1.5em;
-}
-
-h1, h2, h3 {
-    font-family: "Oswald";
-    line-height: 1.3em;
-    margin-bottom: 20px;
-}
-
-h3 {
-    font-weight: 200;
-}
-
-h4 {
-    font-weight: 200;
-}
-
-input {
-    width: 100%;
-    color: black;
-    padding:10px;
-    border-radius: 5px;
-    border: none;
-}
-
-/*--------------------
-HIDING SHIT
---------------------*/
-
-@media (max-width: 767px) {
-    .mobile-only {
-        display: block !important;   
-    }
-    
-  .tablet-up {
-    display: none !important;
-  }
-}
-
-@media (min-width: 768px) {
-    .mobile-only {
-        display: none !important;   
-    }
-  .tablet-up {
-    display: block !important;
-  }
-}
-
-
-
-
-/*--------------------
-NAV BAR
---------------------*/
-
-header.navbar {
-    
-    background: rgba(0,0,0,0.8);
-
-    button {
-        margin: 5px;
-        font-size: 16px;
-        height: 40px;
-        padding: 5px 20px 5px 20px;
-    }
-}
-
-.navbar-logo {
-    height: 25px;
-}
-
-.navbar-inverse .navbar-text {
-    margin-top: 11px;
-}
 
 /*--------------------
 UNORGANIZED
@@ -216,7 +68,9 @@ UNORGANIZED
     }
 }
 
-
+.mobile-vid {
+    
+}
 
 
 /*--------------------
@@ -226,103 +80,6 @@ COLOR CLASSES
 .white {
     color: white;
 }
-
-
-
-
-/*--------------------
-HELPER CLASSES
---------------------*/
-
-.center {
-    text-align: center;
-}
-
-.right {
-    text-align: right;
-}
-
-.pad {
-    padding: 20px;
-}
-
-.add-margin-bottom {
-    margin-bottom: 40px;
-}
-
-.pad-top-and-bottom {
-    padding: 40px 0px 40px 0px
-}
-
-.flex-container {
-    display: flex;
-
-    .flex-vcenter {
-        align-self: center;
-    }
-}
-
-.no-pad {
-    padding: 0px;
-}
-
-.no-pad-top {
-    padding-top: 0px;
-}
-
-.no-pad-bottom {
-    padding-bottom: 0px;
-}
-
-.no-bottom {
-    padding-bottom: 0;
-    margin-bottom: 0;
-}
-
-.half-pad-top {
-    padding-top: 20px;
-}
-
-
-
-
-
-// Buttons
-button {
-    position: relative;
-    vertical-align: top;
-    height: 60px;
-    padding: 0px 30px 0px 30px;
-    font-size: 22px;
-    color: white;
-    text-align: center;
-    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
-    background: $color5;
-    border: 0;
-    border-bottom: 2px solid $color5-shadow;
-    cursor: pointer;
-    -webkit-box-shadow: inset 0 -2px $color5-shadow;
-    box-shadow: inset 0 -2px $color5-shadow;
-    border-radius: 5px;
-    margin: auto;
-    margin-bottom: 20px;
-    display: block;
-
-    &.inline {
-        display: inline;
-        margin: 0;
-    }
-}
-
-button:active {
-    top: 1px;
-    outline: none;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-}
-
-
-
 
 
 /*--------------------
