--- a/scss/guide.scss
+++ b/scss/guide.scss
@@ -46,12 +46,13 @@
 
 .guide-img {
     max-width: 100%;
+    margin-bottom: 12px;
 }
 
 .guide-row {
     margin-bottom: 20px;
     
-    p {
+    p:first-child {
         padding-top: 2px;   
     }
 }
