Switch the landing focus from getting the email signup to getting the guide.

--- a/css/styles.css
+++ b/css/styles.css
@@ -187,6 +187,9 @@ UNORGANIZED
 .cta-headline {
   margin-top: 10px; }
 
+@media (min-width: 980px) {
+  .cta-headline {
+    margin-top: 0; } }
 .pre-cta {
   font-family: FuturaLT;
   text-align: center;
@@ -255,7 +258,7 @@ SPLASH SCREEN
   margin-bottom: 15px; }
 
 .cta-button {
-  margin-top: 0;
+  margin-top: 25px;
   margin-bottom: 10px; }
 
 .cta-button:hover {
