--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -241,3 +241,12 @@ button:active {
     -webkit-box-shadow: none;
     box-shadow: none;
 }
+
+.cta-button {
+    margin-top: 25px;
+    margin-bottom: 10px;
+}
+
+.cta-button:hover {
+    background-color: $color5-highlight;
+}
