--- a/scss/guide.scss
+++ b/scss/guide.scss
@@ -56,3 +56,29 @@
         padding-top: 2px;   
     }
 }
+
+.email-cta-section {
+    background-color: $splash-bg-color;
+    color: white;
+}
+
+.email-cta-box {
+    background-color: #332F49;
+    padding: 20px 20px;
+    width: 100%;
+}
+
+.cta-email {
+    width: 80%;
+    margin: 15px auto;
+    display: block;
+}
+
+.cta-checkbox {
+    
+}
+
+.help-me-vote-section {
+
+}
+
