--- a/css/guide.css
+++ b/css/guide.css
@@ -202,10 +202,19 @@ button:active {
 
 .email-cta-box {
   background-color: #332F49;
-  padding: 20px 20px;
+  padding: 20px 25px;
   width: 100%; }
 
 .cta-email {
   width: 80%;
   margin: 15px auto;
   display: block; }
+
+.help-me-vote-section {
+  padding-top: 20px; }
+
+.first-email-cta-section {
+  color: white;
+  background-color: #332F49;
+  padding: 15px 0;
+  margin-bottom: 20px; }
