--- a/scss/guide.scss
+++ b/scss/guide.scss
@@ -64,7 +64,7 @@
 
 .email-cta-box {
     background-color: #332F49;
-    padding: 20px 20px;
+    padding: 20px 25px;
     width: 100%;
 }
 
@@ -79,6 +79,13 @@
 }
 
 .help-me-vote-section {
+    padding-top: 20px;
+}
 
+.first-email-cta-section {
+    color: white;
+    background-color: #332F49;
+    padding: 15px 0;
+    margin-bottom: 20px;
 }
 
