Guide work - add another CTA, footer.

--- a/css/guide.css
+++ b/css/guide.css
@@ -161,6 +161,43 @@ button:active {
 .cta-button:hover {
   background-color: #ff33c4; }
 
+/*--------------------
+FOOTER
+--------------------*/
+.bottom-logo {
+  height: 28px;
+  margin-top: 0px; }
+
+.footer {
+  padding: 20px 0;
+  background-color: black;
+  color: white;
+  font-size: 14px;
+  width: 100%; }
+  .footer span {
+    margin-top: 3px; }
+  .footer a {
+    color: #ff33c4; }
+  .footer a:hover {
+    color: #ff00b5; }
+  .footer a:visited {
+    color: #ff00b5; }
+
+.footer-list {
+  list-style-type: none; }
+  .footer-list li {
+    display: inline;
+    margin-right: 10px; }
+
+.sponsor {
+  margin-left: 10px;
+  display: inline;
+  height: 40px; }
+
+.sponsor-text {
+  font-size: 13px;
+  color: white; }
+
 .guide-header {
   padding-top: 70px;
   background-color: #250C3D;
@@ -216,5 +253,5 @@ button:active {
 .first-email-cta-section {
   color: white;
   background-color: #332F49;
-  padding: 15px 0;
+  padding: 15px 15px;
   margin-bottom: 20px; }
