--- a/scss/guide.scss
+++ b/scss/guide.scss
@@ -85,7 +85,7 @@
 .first-email-cta-section {
     color: white;
     background-color: #332F49;
-    padding: 15px 0;
+    padding: 15px 15px;
     margin-bottom: 20px;
 }
 
