--- a/css/guide.css
+++ b/css/guide.css
@@ -238,7 +238,6 @@ FOOTER
   color: white; }
 
 .email-cta-box {
-  background-color: #332F49;
   padding: 20px 25px;
   width: 100%; }
 
@@ -247,6 +246,9 @@ FOOTER
   margin: 15px auto;
   display: block; }
 
+@media (min-width: 768px) {
+  .email-cta-box {
+    background-color: #332F49; } }
 .help-me-vote-section {
   padding-top: 20px; }
 
