--- a/scss/guide.scss
+++ b/scss/guide.scss
@@ -63,7 +63,7 @@
 }
 
 .email-cta-box {
-    background-color: #332F49;
+
     padding: 20px 25px;
     width: 100%;
 }
@@ -72,6 +72,12 @@
     width: 80%;
     margin: 15px auto;
     display: block;
+}
+
+@media (min-width: 768px) {
+    .email-cta-box {
+        background-color: #332F49;
+    }
 }
 
 .cta-checkbox {
