--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -342,6 +342,26 @@ SHARE
     color: white;
 }
 
+.facebook-button-text {
+    margin-left: 3px;
+    margin-top: -10px;
+    height: 25px;
+    display: inline;
+}
+
+.facebook-plugin-container {
+    //@extend .center-block;
+    width: 300px;
+    margin: 0 auto;
+    margin-top: 15px;
+}
+
+@media (min-width: 520px) {
+    .facebook-plugin-container {
+        width: 500px;   
+    }
+}
+
 .stButton .st-twitter-counter   {
     padding-bottom: 20px !important;
 }
@@ -354,7 +374,23 @@ SHARE
     padding-bottom: 20px !important;
 }
 
+.facebook-button {
+    background-color: $facebook-blue;
+    -webkit-box-shadow: inset 0 -2px $facebook-blue-shadow;
+    box-shadow: inset 0 -2px $facebook-blue-shadow;
+    border-bottom: 2px solid $facebook-blue-shadow;
+    margin-top: 25px;
+}
 
+.share-instructions {
+    width: 180px;
+    margin: 0 auto;
+    
+    li {
+        font-size: 21px;  
+        
+    }
+}
 
 /*--------------------
 DONATION
