--- a/css/styles.css
+++ b/css/styles.css
@@ -168,12 +168,12 @@ button:active {
 /*--------------------
 FOOTER
 --------------------*/
-.bottom-logo {
+.footer-logo {
   height: 28px;
-  margin-top: 0px; }
+  margin-top: 13px; }
 
 .footer {
-  padding: 20px 0;
+  padding: 0 0;
   background-color: black;
   color: white;
   font-size: 14px;
@@ -193,10 +193,30 @@ FOOTER
     display: inline;
     margin-right: 10px; }
 
+.share-cta-box {
+  background-color: #250C3D;
+  padding: 20px 25px;
+  width: 88%;
+  margin: 0 auto; }
+
+@media (min-width: 768px) {
+  .share-cta-box {
+    background-color: #332F49; } }
+.thinkrad {
+  display: inline;
+  height: 50px;
+  margin-left: 10px;
+  margin-top: 10px; }
+
+.right-side-footer {
+  position: absolute;
+  right: 0; }
+
 .sponsor {
   margin-left: 10px;
   display: inline;
-  height: 40px; }
+  height: 40px;
+  margin-top: 17px; }
 
 .sponsor-text {
   font-size: 13px;
@@ -405,11 +425,9 @@ SHARE
   background-size: cover;
   color: white; }
   .canada-area h1 {
-    font-size: 30px;
-    text-align: center; }
+    font-size: 30px; }
   .canada-area h2 {
-    font-size: 24px;
-    text-align: center; }
+    font-size: 24px; }
 
 @media (min-width: 768px) {
   .canada-area {
@@ -421,8 +439,6 @@ SHARE
     .canada-area h2 {
       font-size: 30px; } }
 .share-area {
-  padding-top: 20px;
-  padding-bottom: 20px;
   background-color: #250C3D;
   color: white; }
 
@@ -459,6 +475,8 @@ SHARE
 .share-instructions {
   width: 180px;
   margin: 0 auto; }
+  .share-instructions ol {
+    margin-left: -7px; }
   .share-instructions li {
     font-size: 21px; }
 
