--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -309,12 +309,12 @@ SHARE
     
     h1 {
         font-size: 30px;
-        text-align: center;
+        //text-align: center;
     }
     
     h2 {
         font-size: 24px; 
-        text-align: center;
+        //text-align: center;
     }
 }
 
@@ -336,8 +336,7 @@ SHARE
 
 }
 
-.share-area {
-    @include standard-section;
+.share-area {   
     background-color: #250C3D;
     color: white;
 }
@@ -385,6 +384,10 @@ SHARE
 .share-instructions {
     width: 180px;
     margin: 0 auto;
+    
+    ol {
+        margin-left: -7px;
+    }
     
     li {
         font-size: 21px;  
