Messing around with lots of approaches to facebook likes.

--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,10 @@ header.navbar {
 .navbar-inverse .navbar-text {
   margin-top: 11px; }
 
+.fb-nav {
+  padding-top: 8px;
+  padding-left: 7px; }
+
 /*--------------------
 HELPER CLASSES
 --------------------*/
@@ -170,7 +174,7 @@ FOOTER
 --------------------*/
 .footer-logo {
   height: 28px;
-  margin-top: 13px; }
+  margin-top: 15px; }
 
 .footer {
   padding: 0 0;
@@ -221,6 +225,47 @@ FOOTER
 .sponsor-text {
   font-size: 13px;
   color: white; }
+
+/*--------------------
+SHARE
+--------------------*/
+.facebook-button-text {
+  margin-left: 3px;
+  margin-top: -10px;
+  height: 25px;
+  display: inline; }
+
+.navbar-facebook-button-text {
+  display: inline;
+  margin-top: -7px;
+  margin-left: 1px;
+  height: 18px; }
+
+.facebook-plugin-container {
+  width: 300px;
+  margin: 0 auto; }
+
+.facebook-likebox-container {
+  width: 225px;
+  margin: 0 auto; }
+
+@media (min-width: 520px) {
+  .facebook-plugin-container {
+    width: 500px; } }
+.facebook-button {
+  background-color: #43609C;
+  -webkit-box-shadow: inset 0 -2px #344a78;
+  box-shadow: inset 0 -2px #344a78;
+  border-bottom: 2px solid #344a78;
+  margin-top: 25px; }
+
+.share-instructions {
+  width: 180px;
+  margin: 0 auto; }
+  .share-instructions ol {
+    margin-left: -7px; }
+  .share-instructions li {
+    font-size: 21px; }
 
 /*--------------------
 UNORGANIZED
@@ -442,20 +487,6 @@ SHARE
   background-color: #250C3D;
   color: white; }
 
-.facebook-button-text {
-  margin-left: 3px;
-  margin-top: -10px;
-  height: 25px;
-  display: inline; }
-
-.facebook-plugin-container {
-  width: 300px;
-  margin: 0 auto;
-  margin-top: 15px; }
-
-@media (min-width: 520px) {
-  .facebook-plugin-container {
-    width: 500px; } }
 .stButton .st-twitter-counter {
   padding-bottom: 20px !important; }
 
@@ -464,21 +495,6 @@ SHARE
 
 .stButton .st-facebook-counter {
   padding-bottom: 20px !important; }
-
-.facebook-button {
-  background-color: #43609C;
-  -webkit-box-shadow: inset 0 -2px #344a78;
-  box-shadow: inset 0 -2px #344a78;
-  border-bottom: 2px solid #344a78;
-  margin-top: 25px; }
-
-.share-instructions {
-  width: 180px;
-  margin: 0 auto; }
-  .share-instructions ol {
-    margin-left: -7px; }
-  .share-instructions li {
-    font-size: 21px; }
 
 /*--------------------
 DONATION
