--- a/css/guide.css
+++ b/css/guide.css
@@ -86,6 +86,10 @@ header.navbar {
 .navbar-inverse .navbar-text {
   margin-top: 11px; }
 
+.fb-nav {
+  padding-top: 8px;
+  padding-left: 7px; }
+
 /*--------------------
 HELPER CLASSES
 --------------------*/
@@ -170,7 +174,7 @@ FOOTER
 --------------------*/
 .footer-logo {
   height: 28px;
-  margin-top: 13px; }
+  margin-top: 15px; }
 
 .footer {
   padding: 0 0;
@@ -222,6 +226,47 @@ FOOTER
   font-size: 13px;
   color: white; }
 
+/*--------------------
+SHARE
+--------------------*/
+.facebook-button-text {
+  margin-left: 3px;
+  margin-top: -10px;
+  height: 25px;
+  display: inline; }
+
+.navbar-facebook-button-text {
+  display: inline;
+  margin-top: -7px;
+  margin-left: 1px;
+  height: 18px; }
+
+.facebook-plugin-container {
+  width: 300px;
+  margin: 0 auto; }
+
+.facebook-likebox-container {
+  width: 225px;
+  margin: 0 auto; }
+
+@media (min-width: 520px) {
+  .facebook-plugin-container {
+    width: 500px; } }
+.facebook-button {
+  background-color: #43609C;
+  -webkit-box-shadow: inset 0 -2px #344a78;
+  box-shadow: inset 0 -2px #344a78;
+  border-bottom: 2px solid #344a78;
+  margin-top: 25px; }
+
+.share-instructions {
+  width: 180px;
+  margin: 0 auto; }
+  .share-instructions ol {
+    margin-left: -7px; }
+  .share-instructions li {
+    font-size: 21px; }
+
 .guide-header {
   padding-top: 70px;
   background-color: #250C3D;
@@ -262,17 +307,19 @@ FOOTER
   color: white; }
 
 .email-cta-box {
-  padding: 20px 25px;
-  width: 100%; }
+  padding: 10px 0px;
+  margin: 0 auto;
+  width: 88%; }
 
 .cta-email {
   width: 80%;
   margin: 15px auto;
   display: block; }
 
-@media (min-width: 768px) {
-  .email-cta-box {
-    background-color: #332F49; } }
+.post-fb-plugin {
+  margin-top: 20px;
+  margin-bottom: 10px; }
+
 .help-me-vote-section {
   padding-top: 20px; }
 
