--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -66,11 +66,11 @@ UNORGANIZED
 .urgency-statement {
     text-align: center;
     color: white;
-    font-size: 19px;
+    font-size: 24px;
     padding: 0px 10px;
     
     strong {
-        font-size: 22px;
+        font-size: 26px;
     }
 }
 
@@ -96,6 +96,7 @@ SPLASH SCREEN
     overflow: hidden;
     position: relative; //needed to make overflow work
     background: none;
+    color: white;
     
     .background {
 
@@ -149,9 +150,25 @@ SPLASH SCREEN
     }
 }
 
+.bottom-statement {
+    width: 100%;
+    position: absolute;
+    bottom: 10px;
+    text-align: center;
+    left:0;
+    right:0;
+}
+
+.video-section {
+    //background: black;
+    width: 100%;
+    margin-bottom: 15px;
+}
+
+
 @media (min-width: 768px) {
     .splash {
-        height: 635px;
+        //height: 100vh;
     }
 }
 
@@ -182,7 +199,7 @@ SPLASH SCREEN
     text-align: center;
     color: white;
     font-size: 40px;
-    padding-top: 50px;
+    padding-top: 65px;
 }
 
 .supporting-statement {
