--- a/css/guide.css
+++ b/css/guide.css
@@ -334,3 +334,9 @@ SHARE
   background-color: #332F49;
   padding: 15px 15px;
   margin-bottom: 20px; }
+
+.guide-p {
+  margin-bottom: 8px; }
+
+.guide-ul {
+  margin-bottom: 8px; }
