--- a/css/guide.css
+++ b/css/guide.css
@@ -289,7 +289,10 @@ SHARE
   .guide-list a {
     color: white; }
 
-.guide-registration {
+#guide {
+  display: none; }
+
+#guide-registration {
   padding-top: 20px; }
 
 .step-number {
