Changing around the splash layout.

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -67,7 +67,9 @@ UNORGANIZED
     text-align: center;
     color: white;
     font-size: 24px;
-    padding: 0px 10px;
+    padding: 0 0;
+    margin-top: 30px;
+    padding-bottom: 20px;
     
     strong {
         font-size: 26px;
@@ -205,7 +207,7 @@ SPLASH SCREEN
 .supporting-statement {
     text-align: center;
     font-size: 34px;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
     color: white;
 }
 
@@ -326,6 +328,7 @@ SHARE
     color: white;
     
     h1 {
+        margin-top: 35px;
         font-size: 30px;
         //text-align: center;
     }
@@ -338,9 +341,9 @@ SHARE
 
 @media (min-width: 768px) {
     .canada-area {
-        background-image: url(../img/canada.png);
-        height: 350px;
-        color: black;
+        //background-image: url(../img/canada.png);
+        //height: 350px;
+        //color: black;
         
         h1 {
             font-size: 36px;
