--- a/css/styles.css
+++ b/css/styles.css
@@ -150,7 +150,6 @@ button {
   box-shadow: inset 0 -2px #cc0091;
   border-radius: 5px;
   margin: auto;
-  margin-bottom: 20px;
   display: block; }
   button.inline {
     display: inline;
@@ -198,14 +197,10 @@ FOOTER
     margin-right: 10px; }
 
 .share-cta-box {
-  background-color: #250C3D;
   padding: 20px 25px;
   width: 88%;
   margin: 0 auto; }
 
-@media (min-width: 768px) {
-  .share-cta-box {
-    background-color: #332F49; } }
 .thinkrad {
   display: inline;
   height: 50px;
@@ -313,7 +308,9 @@ UNORGANIZED
   text-align: center;
   color: white;
   font-size: 24px;
-  padding: 0px 10px; }
+  padding: 0 0;
+  margin-top: 30px;
+  padding-bottom: 20px; }
   .urgency-statement strong {
     font-size: 26px; }
 
@@ -404,7 +401,7 @@ SPLASH SCREEN
 .supporting-statement {
   text-align: center;
   font-size: 34px;
-  margin-bottom: 20px;
+  margin-bottom: 25px;
   color: white; }
 
 .videoWrapper {
@@ -480,19 +477,16 @@ SHARE
   background-size: cover;
   color: white; }
   .canada-area h1 {
+    margin-top: 35px;
     font-size: 30px; }
   .canada-area h2 {
     font-size: 24px; }
 
 @media (min-width: 768px) {
-  .canada-area {
-    background-image: url(../img/canada.png);
-    height: 350px;
-    color: black; }
-    .canada-area h1 {
-      font-size: 36px; }
-    .canada-area h2 {
-      font-size: 30px; } }
+  .canada-area h1 {
+    font-size: 36px; }
+  .canada-area h2 {
+    font-size: 30px; } }
 .share-area {
   background-color: #250C3D;
   color: white; }
