--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -237,7 +237,6 @@ button {
     box-shadow: inset 0 -2px $color5-shadow;
     border-radius: 5px;
     margin: auto;
-    margin-bottom: 20px;
     display: block;
 
     &.inline {
@@ -310,7 +309,7 @@ FOOTER
 }
 
 .share-cta-box {
-    background-color: $splash-bg-color;
+    //background-color: $splash-bg-color;
     padding: 20px 25px;
     width: 88%;
     margin: 0 auto;
@@ -318,7 +317,7 @@ FOOTER
 
 @media (min-width: 768px) {
     .share-cta-box {
-        background-color: #332F49;
+        //background-color: #332F49;
     }
 }
 
