--- a/css/styles.css
+++ b/css/styles.css
@@ -150,6 +150,7 @@ button {
   box-shadow: inset 0 -2px #cc0091;
   border-radius: 5px;
   margin: auto;
+  margin-bottom: 20px;
   display: block; }
   button.inline {
     display: inline;
@@ -488,6 +489,7 @@ SHARE
   .canada-area h2 {
     font-size: 30px; } }
 .share-area {
+  padding-top: 20px;
   background-color: #250C3D;
   color: white; }
 
