--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -237,6 +237,7 @@ button {
     box-shadow: inset 0 -2px $color5-shadow;
     border-radius: 5px;
     margin: auto;
+    margin-bottom: 20px;
     display: block;
 
     &.inline {
