Add a second little headline to the ID splash.

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -228,6 +228,10 @@ POINTS
     margin-bottom: 10px;
 }
 
+.point-headline-2 {
+    margin-bottom: 25px;
+}
+
 .point-container {
 
     min-height: 100%;
