--- a/css/styles.css
+++ b/css/styles.css
@@ -418,6 +418,9 @@ POINTS
   margin-top: 30px;
   margin-bottom: 10px; }
 
+.point-headline-2 {
+  margin-bottom: 25px; }
+
 .point-container {
   min-height: 100%; }
   .point-container .point-inner {
