--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -311,7 +311,7 @@ FOOTER
 
 .share-cta-box {
     //background-color: $splash-bg-color;
-    padding: 20px 25px;
+    //padding: 20px 25px;
     width: 88%;
     margin: 0 auto;
 }
