--- a/scss/guide.scss
+++ b/scss/guide.scss
@@ -52,11 +52,12 @@
     padding-top: 0;
     color: white;
     background-color: $splash-bg-color;
-    
+    padding-bottom: 20px;
 }
 
 #guide-vote {
     display:none;
+    padding-top: 20px;
 }
 
 #guide-vote-cta {
