--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -367,6 +367,10 @@ SHARE
     color: white;
 }
 
+.fb-area {
+    padding-top: 20px;
+}
+
 .stButton .st-twitter-counter   {
     padding-bottom: 20px !important;
 }
