--- a/css/guide.css
+++ b/css/guide.css
@@ -198,7 +198,6 @@ FOOTER
     margin-right: 10px; }
 
 .share-cta-box {
-  padding: 20px 25px;
   width: 88%;
   margin: 0 auto; }
 
@@ -295,10 +294,12 @@ SHARE
 .help-me-vote-toggle-area {
   padding-top: 0;
   color: white;
-  background-color: #250C3D; }
+  background-color: #250C3D;
+  padding-bottom: 20px; }
 
 #guide-vote {
-  display: none; }
+  display: none;
+  padding-top: 20px; }
 
 #guide-vote-cta {
   display: none; }
