--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,36 @@
 /*--------------------
+NAV BAR
+--------------------*/
+.header-navbar {
+  background: rgba(0, 0, 0, 0.8); }
+
+.navbar-logo {
+  margin-top: 15px;
+  margin-left: 10px;
+  height: 20px;
+  display: inline;
+  float: left; }
+
+.fb-nav {
+  position: absolute;
+  margin-top: 8px;
+  right: 10px; }
+
+@media (min-width: 375px) {
+  .navbar-logo {
+    margin-left: 16px;
+    margin-top: 13px;
+    height: 25px; }
+
+  .fb-nav {
+    right: 16px; } }
+@media (min-width: 768px) {
+  .navbar-logo {
+    margin-left: 64px; }
+
+  .fb-nav {
+    right: 64px; } }
+/*--------------------
 COLORS
 --------------------*/
 .color1-background {
@@ -70,26 +102,184 @@ HIDING SHIT
   .tablet-up {
     display: block !important; } }
 /*--------------------
-NAV BAR
+HELPER CLASSES
 --------------------*/
-header.navbar {
-  background: rgba(0, 0, 0, 0.8); }
-  header.navbar button {
-    margin: 5px;
-    font-size: 16px;
-    height: 40px;
-    padding: 5px 20px 5px 20px; }
+.center, .guide-title, .guide-subheader {
+  text-align: center; }
 
-.navbar-logo {
-  height: 25px; }
+.center-block {
+  display: block;
+  margin: 0 auto; }
 
-.navbar-inverse .navbar-text {
-  margin-top: 11px; }
+.right {
+  text-align: right; }
 
-.fb-nav {
-  padding-top: 8px;
-  padding-left: 7px; }
+.pad {
+  padding: 20px; }
 
+.add-margin-bottom {
+  margin-bottom: 40px; }
+
+.pad-top-and-bottom {
+  padding: 40px 0px 40px 0px; }
+
+.flex-container {
+  display: flex; }
+  .flex-container .flex-vcenter {
+    align-self: center; }
+
+.no-pad {
+  padding: 0px; }
+
+.no-pad-top {
+  padding-top: 0px; }
+
+.no-pad-bottom {
+  padding-bottom: 0px; }
+
+.no-bottom {
+  padding-bottom: 0;
+  margin-bottom: 0; }
+
+.half-pad-top {
+  padding-top: 20px; }
+
+.footer {
+  padding: 0 0;
+  background-color: black;
+  color: white;
+  width: 100%;
+  font-size: 12px;
+  text-align: center; }
+  .footer a {
+    color: #ff33c4; }
+  .footer a:hover {
+    color: #ff00b5; }
+  .footer a:visited {
+    color: #ff00b5; }
+
+.footer-thinkrad {
+  position: absolute;
+  left: 16px;
+  height: 35px;
+  margin-top: 13px; }
+
+.footer-right2vote {
+  display: none;
+  margin: auto;
+  height: 20px;
+  margin-top: 10px; }
+
+.footer-privacy-policy {
+  margin-left: -30px;
+  padding-top: 3px; }
+
+.footer-clouda {
+  position: absolute;
+  margin-left: 10px;
+  margin-top: 14px;
+  height: 33px;
+  right: 16px; }
+
+@media (min-width: 375px) {
+  .footer-thinkrad {
+    margin-top: 10px;
+    height: 45px; }
+
+  .footer-right2vote {
+    height: 28px; }
+
+  .footer-privacy-policy {
+    margin-top: 18px;
+    font-size: 14px;
+    margin-left: none; }
+
+  .footer-clouda {
+    right: 16px;
+    height: 40px; } }
+@media (min-width: 768px) {
+  .footer-thinkrad {
+    left: 64px; }
+
+  .footer-right2vote {
+    display: block; }
+
+  .footer-privacy-policy {
+    margin-top: 0; }
+
+  .footer-clouda {
+    right: 64px; } }
+/*--------------------
+COLORS
+--------------------*/
+.color1-background {
+  color: white;
+  background: #CEEC97; }
+
+.color2-background {
+  color: white;
+  background: #F4B393; }
+
+.color3-background {
+  background: #7A28CB; }
+
+.color4-background {
+  background: #494368;
+  color: white; }
+
+.color4-shadow-background {
+  background: #332f49;
+  color: white; }
+
+.color5-background {
+  background: #ff00b5; }
+
+/*--------------------
+DEFAULTS
+--------------------*/
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 0;
+  margin-bottom: 20px; }
+
+body {
+  font-family: "Roboto";
+  font-size: 1.8em;
+  font-weight: 200;
+  line-height: 1.5em; }
+
+h1, h2, h3 {
+  font-family: "Oswald";
+  line-height: 1.3em;
+  margin-bottom: 20px; }
+
+h3 {
+  font-weight: 200; }
+
+h4 {
+  font-weight: 200; }
+
+input {
+  width: 100%;
+  color: black;
+  padding: 10px;
+  border-radius: 5px;
+  border: none; }
+
+/*--------------------
+HIDING SHIT
+--------------------*/
+@media (max-width: 767px) {
+  .mobile-only {
+    display: block !important; }
+
+  .tablet-up {
+    display: none !important; } }
+@media (min-width: 768px) {
+  .mobile-only {
+    display: none !important; }
+
+  .tablet-up {
+    display: block !important; } }
 /*--------------------
 HELPER CLASSES
 --------------------*/
@@ -169,57 +359,9 @@ button:active {
 .cta-button:hover {
   background-color: #ff33c4; }
 
-/*--------------------
-FOOTER
---------------------*/
-.footer-logo {
-  height: 28px;
-  margin-top: 15px; }
-
-.footer {
-  padding: 0 0;
-  background-color: black;
-  color: white;
-  font-size: 14px;
-  width: 100%; }
-  .footer span {
-    margin-top: 3px; }
-  .footer a {
-    color: #ff33c4; }
-  .footer a:hover {
-    color: #ff00b5; }
-  .footer a:visited {
-    color: #ff00b5; }
-
-.footer-list {
-  list-style-type: none; }
-  .footer-list li {
-    display: inline;
-    margin-right: 10px; }
-
 .share-cta-box {
   width: 88%;
   margin: 0 auto; }
-
-.thinkrad {
-  display: inline;
-  height: 50px;
-  margin-left: 10px;
-  margin-top: 10px; }
-
-.right-side-footer {
-  position: absolute;
-  right: 0; }
-
-.sponsor {
-  margin-left: 10px;
-  display: inline;
-  height: 40px;
-  margin-top: 17px; }
-
-.sponsor-text {
-  font-size: 13px;
-  color: white; }
 
 /*--------------------
 SHARE
