--- a/css/styles.css
+++ b/css/styles.css
@@ -146,6 +146,7 @@ HELPER CLASSES
 
 .footer {
   padding: 0 0;
+  padding-bottom: 5px;
   background-color: black;
   color: white;
   width: 100%;
@@ -165,14 +166,9 @@ HELPER CLASSES
   margin-top: 13px; }
 
 .footer-right2vote {
-  display: none;
   margin: auto;
   height: 20px;
   margin-top: 10px; }
-
-.footer-privacy-policy {
-  margin-left: -30px;
-  padding-top: 3px; }
 
 .footer-clouda {
   position: absolute;
@@ -186,13 +182,10 @@ HELPER CLASSES
     margin-top: 10px;
     height: 45px; }
 
-  .footer-right2vote {
-    height: 28px; }
-
   .footer-privacy-policy {
-    margin-top: 18px;
     font-size: 14px;
-    margin-left: none; }
+    margin-left: none;
+    text-align: center; }
 
   .footer-clouda {
     right: 16px;
@@ -202,6 +195,8 @@ HELPER CLASSES
     left: 64px; }
 
   .footer-right2vote {
+    height: 28px;
+    margin-top: 15px;
     display: block; }
 
   .footer-privacy-policy {
